[package]
name = "ebf_test-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
ebf_test-common = { path = "../ebf_test-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "ebf_test"
path = "src/main.rs"
